force-app/main/default/objects/Application_CAA__c/Application_CAA__c.object-meta.xml
<CustomObject>
    <label>Application CAA</label>
    <nameField>
        <label>Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications CAA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>