force-app/main/default/objects/Application_CAA__c/fields/Approval_By__c.field-meta.xml
<CustomField>
    <fullName>Approval_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications_CAA1</relationshipName>
    <type>Lookup</type>
</CustomField>