force-app/main/default/objects/Application_CAA__c/fields/Delegated_User__c.field-meta.xml
<CustomField>
    <fullName>Delegated_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications_CAA2</relationshipName>
    <type>Lookup</type>
</CustomField>