force-app/main/default/objects/Application_CAA__c/fields/Exp_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Exp_Appeal__c</fullName>
    <formula>CAA__r.Exp_AP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exp Appeal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>