force-app/main/default/objects/Application_CAA__c/fields/On_Appeal__c.field-meta.xml
<CustomField>
    <fullName>On_Appeal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Appeal</label>
    <type>Checkbox</type>
</CustomField>