force-app/main/default/objects/Application_CAA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Level__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_User__c</columns>
    <columns>Is_Requested__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>